# qasimodo-agent

./: .gitignore  Dockerfile  Dockerfile.run  README.md  SIGNING.md  build.py  create_linux_package.sh  create_macos_app.sh  docker-build.sh  flake.nix  installer.iss  pyproject.toml
.github/workflows/: build.yml  nix.yml  release.yml
distribution/: build.py
nix/: docker.nix  nats-server.nix  package.nix  process-compose.nix  shell.nix
src/distribution/: __init__.py  build.py
src/pyinstaller_test/: __main__.py  build.py
src/qasimodo_agent/: __main__.py  browser.py  build.py  config.py  core_client.py  nkey_manager.py  proto.py  runtime.py  simulate_agent.py  state.py  tui.py
src/qasimodo_agent/protos/: agent_pb2.py
tests/: test_proto.py
