[project]
name = "qasimodo-agent"
dynamic = ["version"]
description = "QAsimodo agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.8.0",
    "pyinstaller>=6.16.0",
    "playwright>=1.49.0",
]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[project.scripts]
qasimodo-agent = "qasimodo_agent.__main__:cli"
build = "distribution.build:build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "python-lsp-server>=1.13.1",
]
