[project]
name = "qasimodo-agent"
version = "0.0.1"
description = "QAsimodo agent"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "browser-use>=0.8.0",
    "pyinstaller>=6.16.0",
    "playwright>=1.49.0",
    "nats-py>=2.10.0",
]

[project.scripts]
qasimodo-agent = "qasimodo_agent.__main__:cli"
build = "distribution.build:build"
simulate-agent = "qasimodo_agent.simulate_agent:cli"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "python-lsp-server>=1.13.1",
]
