[project]
name = "qasimodo-agent"
version = "0.0.1"
description = "QAsimodo agent"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "browser-use>=0.8.0",
    "pyinstaller>=6.16.0",
    "playwright>=1.49.0",
    "nats-py>=2.10.0",
    "protobuf>=5.28.0",
    "qasimodo-specs==0.0.8",
    "rich>=13.9.0",
    "pillow>=10.4.0",
    "nkeys>=0.2.1",
    "pynacl>=1.6.1",
]

[project.scripts]
qasimodo-agent = "qasimodo_agent.__main__:cli"
build = "distribution.build:build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "python-lsp-server>=1.13.1",
]
